radio na ostalim sekcijama na home

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600;700;800&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@800&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Unna:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/slick-theme.css">
     <link rel="stylesheet" href="css/style.css">
@@ -507,7 +508,7 @@
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-12 text-center">
-                <h2 class="h1"><strong>Igraj online</strong></h2>
+                <h2 class="h1"><strong>Igraj online<span class="color-yellow">.</span></strong></h2>
             </div>
         </div>
     </div>
@@ -746,13 +747,90 @@
             <img src="images/e-srecke-potkovica.png" class="games-item__graphic">
         </div>
     </div>
-    <div class="games-btns">
-
+    <div class="games-btns justify-content-center align-items-center d-flex mt-4 pr-3">
+        <p class="h5 mb-0 mr-3"><strong>Više igara </strong></p>
         <button type="button" id="prevv" class="slick-prev">Previous</button>
         <button type="button" id="nextt" class="slick-next">Next</button>
     </div>
     <!-- HOME CAROUSEL -->
-            
+
+
+    <!-- BRZO I LAKO -->
+    <div class="brzo-lako">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 col-lg-5">
+                    <div class="brzo-lako__media">
+                        <img src="images/loyalty-card.png">
+                    </div>
+                </div>
+                <div class="col-md-12 col-lg-7">
+                    <div class="brzo-lako__text">
+                        <p class="h1"><strong>Brzo i lako<span class="color-blue">.</span></strong></p>
+                        <p class="lg">Registruj se i igraj svoje omiljene igre<br>
+                            onlajn uz našu registracionu karticu.</p>
+                        <a href="#" class="btn btn-primary mt-3 lg"><strong>REGISTRUJ SE</strong></a>
+                        <a href="#" class="text-right text-right-mob d-block mt-4">Potrebna vam je pomoć →</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- BRZO I LAKO -->
+          
+    <!-- WINNERS -->
+    <div class="winners">
+        <div class="container mt-5 pb-5">
+            <div class="row justify-content-center">
+                <div class="col-sm-3 winners__img">
+                    <img src="images/srecni-dobitnici.svg">
+                </div>
+                <div class="col-sm-12">
+                    <p class="h1-lg text-center mt-4"><strong>SREĆNI DOBITNICI</strong></p>
+                    <p class="lg text-center"><strong>Svako od nas može da osvoji!</strong></p>
+                </div>
+            </div>
+            <div class="row mt-5 justify-content-center align-items-center">
+                <div class="col-md-12 col-lg-3">
+                    <div class="winners-media">
+                        <img src="images/dobitnik.jpg">
+                    </div>
+                </div>
+                <div class="col-md-12 col-lg-6 offset-md-1">
+                    <div class="winners-text">
+                        <p class="winners-text__quote">“Kupujem kuću na Zlatiboru!”</p>
+                        <p class="lg winners-text__name"><strong>Milan Nikolic (43), Valjevo</strong>
+                            Bingo dobitnik</p>
+                        <p class="winners-text__price">18.000€</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- WINNERS -->
+
+    <!-- WINNERS -->
+    <div class="winners--right-img">
+        <div class="container mt-5">
+            <div class="row mt-5 justify-content-center align-items-center">
+                <div class="col-md-12 col-lg-6">
+                    <div class="winners-text winners-text--right-img">
+                        <p class="winners-text__quote">“Planiram na put oko sveta kada
+                            prođe Korona!”</p>
+                        <p class="lg winners-text__name"><strong>Danijela Stjepanovic (33), Beograd</strong>
+                            Greb Greb</p>
+                        <p class="winners-text__price">3.000.000 dinara.</p>
+                    </div>
+                </div>
+                <div class="col-md-12 col-lg-3 offset-lg-1">
+                    <div class="winners-media">
+                        <img src="images/dobitnica.jpg">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- WINNERS -->
 
 <br><br><br><br><br><br><br><br><br><br><br><br>
 
