--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
                         <p class="h1"><strong>Brzo i lako<span class="color-blue">.</span></strong></p>
                         <p class="lg">Registruj se i igraj svoje omiljene igre<br>
                             onlajn uz našu registracionu karticu.</p>
-                        <a href="#" class="btn btn-primary mt-3 lg"><strong>REGISTRUJ SE</strong></a>
+                        <a href="#" class="btn btn-primary mt-3 btn-lgg"><strong>REGISTRUJ SE</strong></a>
                         <a href="#" class="text-right text-right-mob d-block mt-4">Potrebna vam je pomoć →</a>
                     </div>
                 </div>
@@ -796,7 +796,7 @@
                         <img src="images/dobitnik.jpg">
                     </div>
                 </div>
-                <div class="col-md-12 col-lg-6 offset-md-1">
+                <div class="col-md-12 col-lg-6 offset-lg-1">
                     <div class="winners-text">
                         <p class="winners-text__quote">“Kupujem kuću na Zlatiboru!”</p>
                         <p class="lg winners-text__name"><strong>Milan Nikolic (43), Valjevo</strong>
@@ -828,9 +828,194 @@
                     </div>
                 </div>
             </div>
+            <div class="row mt-5">
+                <div class="col-md-12 text-center">
+                    <a href="#" class="btn btn-secondary btn-lgg"><strong>SVI DOBITNICI</strong></a>
+                </div>
+            </div>
         </div>
     </div>
     <!-- WINNERS -->
+
+    <!-- CHARITY -->
+    <div class="charity">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 col-lg-4">
+                    <div class="charity-media">
+                        <img src="images/Riba-srce.jpg">
+                    </div>
+                </div>
+                <div class="col-md-12 col-lg-8">
+                    <div class="charity-text">
+                        <p class="h1 charity-text__price"><strong>55.000.000 dinara</strong></p>
+                        <p class="lg charity-text__text">odlazi u dobrotvorne svrhe zahvaljujuci vama. Lorem
+                            ipsum dolor sit amet, consectetur adipiscing elit!</p>
+                        <p class="charity-text__18 d-flex">
+                            <span class="eighteen">18+</span>
+                            <span class="charity-text__18-text">IGRAJ <br>ODGOVORNO!</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-12 text-center mt-5 pt-4">
+                    <p class="h1-lg"><strong>HVALA IGRAČIMA!</strong></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- CHARITY -->
+
+
+    <!-- GREB -->
+    <div class="greb">
+        <div class="container">
+            <div class="row align-items-end">
+                <div class="col-md-12 col-lg-6 offset-lg-1">
+                    <div class="greb__text">
+                        <img src="images/greb-logo.svg" alt="" width="140">
+                        <p class="h1"><strong>Ako želiš brzu zabavu i laki keš!</strong></p>
+                        <a href="#" class="btn btn-secondary mt-3 btn-lgg"><strong>SAZNAJ VIŠE</strong></a>
+                    </div>
+                </div>
+                <div class="col-md-12 col-lg-5">
+                    <div class="greb__media">
+                        <img src="images/greb-greb-srecko.png" class="img-xs">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- GREB -->
+
+
+    <!-- SECTION -->
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-md-12 col-lg-4 offset-lg-1">
+                <img class="d-block m-auto img-xs" src="images/Pomoc-igracima.png">
+            </div>
+            <div class="col-md-12 col-lg-6 offset-lg-1">
+                <div class="pt-5 text-center-mob">
+                    <p class="h1 mb-4"><strong>Tu smo za vas<span class="color-yellow">.</span></strong></p>
+                    <p class="mb-4">Kako da igram online?<br>
+                        Kako da proverim rezultate?<br>
+                        Kako da se registrujem?<br>
+                        Kako do svog dobitka?</p>
+                    <a href="#" class="btn btn-outline-dark mt-3 btn-lgg"><strong>POMOĆ IGRAČIMA</strong></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- SECTION -->
+
+
+    <!-- PRE-FOOTER -->
+    <div class="container-fluid pre-footer">
+        <div class="row align-items-center">
+            <div class="col-sm-12 col-lg-6 pre-footer-col">
+                <div class="row justify-content-end align-items-center">
+                    <div class="col-4 col-sm-2">
+                        <div class="cta">
+                            <?xml version="1.0" encoding="utf-8"?>
+                            <!-- Generator: Adobe Illustrator 24.3.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 74 74"
+                                enable-background="new 0 0 74 74" xml:space="preserve" width="100%" class="d-block
+                                m-auto">
+                                <g>
+                                    <circle fill="#152238" cx="37" cy="37" r="37" />
+                                    <g id="XMLID_1321_">
+                                        <g id="XMLID_396_">
+                                            <path id="XMLID_429_" fill="#FFFFFF" class="cta-hov" d="M57.41,29.96l1.23,2.12c0.06,0.11,0.05,0.22,0.04,0.27s-0.06,0.15-0.17,0.22l-3.24,1.87
+                    c-0.17,0.1-0.39,0.04-0.49-0.13l-6.52-11.29c-0.1-0.17-0.04-0.39,0.13-0.49l3.24-1.87c0.17-0.1,0.39-0.04,0.49,0.13l1.16,2.01
+                    L57.41,29.96z M54.87,21.88l-1.16-2.01c-0.61-1.05-1.95-1.41-3-0.8l-3.24,1.87c-0.49,0.28-0.83,0.73-0.99,1.23h-9.19
+                    c-1.29,0-2.5,0.5-3.41,1.41l-0.94,0.94c-0.83-0.2-1.67-0.3-2.52-0.3h-2.85c-0.14-0.55-0.5-1.05-1.03-1.35l-3.24-1.87
+                    c-0.51-0.29-1.1-0.37-1.67-0.22c-0.57,0.15-1.04,0.52-1.33,1.02L13.77,33.1c-0.29,0.51-0.37,1.1-0.22,1.67s0.52,1.04,1.02,1.33
+                    l3.24,1.87c0.35,0.2,0.72,0.29,1.09,0.29c0.14,0,0.27-0.01,0.4-0.04l2.65,2.65c-0.04,0.21-0.06,0.42-0.06,0.64
+                    c0,0.88,0.34,1.71,0.97,2.34c0.6,0.6,1.37,0.92,2.15,0.96c-0.01,0.12-0.02,0.23-0.02,0.35c0,0.88,0.34,1.71,0.97,2.34
+                    c0.62,0.62,1.45,0.97,2.34,0.97c0.02,0,0.05,0,0.07,0c0,0.02,0,0.05,0,0.07c0,0.88,0.34,1.71,0.97,2.34
+                    c0.62,0.62,1.45,0.97,2.34,0.97c0.02,0,0.05,0,0.07,0c0,0.02,0,0.05,0,0.07c0,0.88,0.34,1.71,0.97,2.34
+                    c0.62,0.62,1.45,0.97,2.34,0.97c0.88,0,1.71-0.34,2.34-0.97l1.31-1.31c0.38-0.38,0.65-0.84,0.81-1.32
+                    c0.58,0.43,1.27,0.64,1.96,0.64c0.85,0,1.69-0.32,2.34-0.97c0.39-0.39,0.66-0.85,0.82-1.36c0.53,0.35,1.15,0.53,1.8,0.53
+                    c0.88,0,1.71-0.34,2.34-0.97c0.46-0.46,0.77-1.04,0.9-1.67c0.33,0.11,0.68,0.17,1.04,0.17c0.88,0,1.71-0.34,2.34-0.97
+                    c1.29-1.29,1.29-3.39,0-4.68l-2.14-2.14l3.92-3.92c0.09,0.01,0.17,0.02,0.26,0.02c0.37,0,0.75-0.09,1.09-0.29l3.24-1.87
+                    c0.51-0.29,0.87-0.77,1.02-1.33c0.15-0.57,0.07-1.16-0.22-1.67l0,0l-1.23-2.12L54.87,21.88z M15.49,34.51
+                    c-0.11-0.06-0.15-0.16-0.17-0.22c-0.01-0.05-0.03-0.16,0.04-0.27l6.52-11.29c0.06-0.11,0.16-0.15,0.22-0.17
+                    c0.02-0.01,0.06-0.01,0.09-0.01c0.05,0,0.11,0.01,0.18,0.05l3.24,1.87c0.17,0.1,0.23,0.32,0.13,0.49l-6.52,11.29
+                    c-0.1,0.17-0.32,0.23-0.49,0.13L15.49,34.51z M23.74,41.52c0-0.39,0.15-0.76,0.43-1.04l0.79-0.79c0.29-0.29,0.66-0.43,1.04-0.43
+                    c0.38,0,0.75,0.14,1.04,0.43c0.28,0.28,0.43,0.65,0.43,1.04c0,0.39-0.15,0.76-0.43,1.04l-0.79,0.79c-0.57,0.57-1.5,0.57-2.08,0
+                    C23.89,42.28,23.74,41.92,23.74,41.52L23.74,41.52z M28.31,46.64c-0.39,0-0.76-0.15-1.04-0.43c-0.28-0.28-0.43-0.65-0.43-1.04
+                    c0-0.39,0.15-0.76,0.43-1.04l1.31-1.31c0.29-0.29,0.66-0.43,1.04-0.43c0.38,0,0.75,0.14,1.04,0.43c0.28,0.28,0.43,0.65,0.43,1.04
+                    s-0.15,0.76-0.43,1.04l-1.31,1.31C29.07,46.49,28.71,46.64,28.31,46.64z M31.69,50.01c-0.39,0-0.76-0.15-1.04-0.43
+                    c-0.28-0.28-0.43-0.65-0.43-1.04s0.15-0.76,0.43-1.04l1.31-1.31c0.29-0.29,0.66-0.43,1.04-0.43s0.75,0.14,1.04,0.43
+                    c0.28,0.28,0.43,0.65,0.43,1.04c0,0.39-0.15,0.76-0.43,1.04l-1.31,1.31C32.45,49.86,32.08,50.01,31.69,50.01z M37.41,51.65
+                    l-1.31,1.31c-0.28,0.28-0.65,0.43-1.04,0.43s-0.76-0.15-1.04-0.43c-0.28-0.28-0.43-0.65-0.43-1.04c0-0.39,0.15-0.76,0.43-1.04
+                    l1.31-1.31c0.29-0.29,0.66-0.43,1.04-0.43c0.38,0,0.75,0.14,1.04,0.43C37.98,50.15,37.98,51.08,37.41,51.65z M51.76,45.75
+                    c-0.28,0.28-0.65,0.43-1.04,0.43c-0.39,0-0.76-0.15-1.04-0.43l-8.77-8.77c-0.36-0.36-0.94-0.36-1.3,0c-0.36,0.36-0.36,0.94,0,1.3
+                    l7.87,7.87c0.28,0.28,0.43,0.65,0.43,1.04s-0.15,0.76-0.43,1.04c-0.28,0.28-0.65,0.43-1.04,0.43s-0.76-0.15-1.04-0.43l-9.45-9.45
+                    c-0.36-0.36-0.94-0.36-1.3,0c-0.36,0.36-0.36,0.94,0,1.3l7.87,7.87c0.28,0.28,0.43,0.65,0.43,1.04s-0.15,0.76-0.43,1.04
+                    c-0.57,0.57-1.5,0.57-2.08,0l-1.73-1.73c0,0-0.01,0-0.01-0.01c-0.66-0.66-1.53-0.98-2.4-0.96c0-0.02,0-0.05,0-0.07
+                    c0-0.88-0.34-1.71-0.97-2.34c-0.66-0.66-1.54-0.98-2.41-0.97c0-0.02,0-0.05,0-0.07c0-0.88-0.34-1.71-0.97-2.34
+                    c-0.72-0.72-1.7-1.04-2.65-0.95c-0.04-0.82-0.38-1.59-0.96-2.18c-1.29-1.29-3.39-1.29-4.68,0l-0.79,0.79c0,0,0,0,0,0l-2.04-2.04
+                    l6.4-11.08h3.19c0.31,0,0.62,0.02,0.93,0.05l-1.05,1.05c-0.62,0.62-0.97,1.45-0.97,2.34c0,0.88,0.34,1.71,0.97,2.34
+                    c0.64,0.64,1.49,0.97,2.34,0.97c0.85,0,1.69-0.32,2.34-0.97l2.48-2.48l14.31,14.31C52.33,44.24,52.33,45.17,51.76,45.75
+                    L51.76,45.75z M42.93,32.24c1.34-0.97,2.16-2.53,2.16-4.23c0-0.51-0.41-0.92-0.92-0.92c-0.51,0-0.92,0.41-0.92,0.92
+                    c0,1.2-0.63,2.3-1.65,2.9l-3.5-3.5c-0.36-0.36-0.94-0.37-1.3-0.01l-3.14,3.14c-0.57,0.57-1.5,0.57-2.08,0
+                    c-0.28-0.28-0.43-0.65-0.43-1.04c0-0.39,0.15-0.76,0.43-1.04l3.58-3.58c0.56-0.56,1.32-0.88,2.12-0.88h9.42l6.48,11.22
+                    c0.02,0.03,0.03,0.05,0.05,0.08l-3.62,3.62L42.93,32.24z" />
+                                        </g>
+                                    </g>
+                                </g>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="col-8 col-sm-6">
+                        <h2 class="color-white"><strong>Postani naš partner</strong></h2>
+                        <a class="lg color-white" href="#">Saznaj više <i class="fas fa-long-arrow-alt-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-lg-6 pre-footer-col">
+                <div class="row justify-content-start align-items-center">
+                    <div class="col-4 col-sm-2 offset-lg-1">
+                        <div class="cta">
+                            <?xml version="1.0" encoding="utf-8"?>
+                            <!-- Generator: Adobe Illustrator 24.3.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 74 74"
+                                enable-background="new 0 0 74 74" xml:space="preserve" width="100%" class="d-block
+                                m-auto">
+                                <g>
+                                    <circle fill="#152238" cx="37" cy="37" r="37" />
+                                    <g>
+                                        <path fill="#FFFFFF" class="cta-hov" d="M56.42,52.8H55.8V33.96c1.72-1.13,2.74-3.02,2.74-5.07c0-0.13-0.03-0.26-0.1-0.38l-5.09-8.9
+			c-0.38-0.66-1.09-1.07-1.85-1.07H21.58c-0.76,0-1.47,0.41-1.85,1.07l-5.09,8.9c-0.07,0.11-0.1,0.25-0.1,0.38
+			c0,2.05,1.02,3.94,2.74,5.07V52.8h-0.61c-0.42,0-0.76,0.34-0.76,0.76c0,0.42,0.34,0.76,0.76,0.76h39.75
+			c0.42,0,0.76-0.34,0.76-0.76C57.17,53.14,56.83,52.8,56.42,52.8z M50.86,50.9v1.91h-6.7V50.9H50.86z M50.86,37.88v11.5h-6.7v-11.5
+			H50.86z M16.61,28.13l4.44-7.77c0.11-0.19,0.31-0.31,0.53-0.31h29.93c0.22,0,0.42,0.12,0.53,0.31l4.44,7.77H16.61z M56.96,29.65
+			c-0.37,2.17-2.27,3.79-4.49,3.79c-2.22,0-4.12-1.62-4.49-3.79H56.96z M51.62,36.36H43.4c-0.42,0-0.76,0.34-0.76,0.76V52.8H18.8
+			V34.69c0.59,0.18,1.2,0.28,1.81,0.28c2.22,0,4.24-1.19,5.31-3.13c1.07,1.94,3.09,3.13,5.31,3.13c2.22,0,4.24-1.19,5.31-3.13
+			c1.07,1.94,3.09,3.13,5.31,3.13s4.24-1.19,5.31-3.13c1.07,1.94,3.09,3.13,5.31,3.13c0.61,0,1.22-0.09,1.81-0.28V52.8h-1.91V37.12
+			C52.38,36.7,52.04,36.36,51.62,36.36z M31.23,33.44c-2.22,0-4.12-1.62-4.49-3.79h8.97C35.35,31.82,33.45,33.44,31.23,33.44z
+			 M41.85,33.44c-2.22,0-4.12-1.62-4.49-3.79h8.97C45.97,31.82,44.07,33.44,41.85,33.44z M25.1,29.65
+			c-0.37,2.17-2.27,3.79-4.49,3.79c-2.22,0-4.12-1.62-4.49-3.79H25.1z" />
+                                        <path fill="#FFFFFF" class="cta-hov"
+                                            d="M39.97,36.36h-18.5c-0.42,0-0.76,0.34-0.76,0.76v13.02c0,0.42,0.34,0.76,0.76,0.76h18.5
+			c0.42,0,0.76-0.34,0.76-0.76V37.12C40.73,36.7,40.39,36.36,39.97,36.36z M39.21,37.88v11.5H22.23v-11.5H39.21z" />
+                                    </g>
+                                </g>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="col-8 col-sm-6">
+                        <h2 class="color-white"><strong>Prodajna mesta</strong></h2>
+                        <a class="lg color-white" href="#">Saznaj više <i class="fas fa-long-arrow-alt-right"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- PRE-FOOTER -->
 
 <br><br><br><br><br><br><br><br><br><br><br><br>
 
