pri kraju sa home

--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
             <img src="images/e-srecke-potkovica.png" class="games-item__graphic">
         </div>
     </div>
-    <div class="games-btns justify-content-center align-items-center d-flex mt-4 pr-3">
+    <div class="games-btns justify-content-center align-items-center d-flex mt-4">
         <p class="h5 mb-0 mr-3"><strong>Više igara </strong></p>
         <button type="button" id="prevv" class="slick-prev">Previous</button>
         <button type="button" id="nextt" class="slick-next">Next</button>
@@ -911,9 +911,9 @@
 
     <!-- PRE-FOOTER -->
     <div class="container-fluid pre-footer">
-        <div class="row align-items-center">
+        <div class="row align-content-stretch">
             <div class="col-sm-12 col-lg-6 pre-footer-col">
-                <div class="row justify-content-end align-items-center">
+                <div class="row">
                     <div class="col-4 col-sm-2">
                         <div class="cta">
                             <?xml version="1.0" encoding="utf-8"?>
@@ -1017,7 +1017,153 @@
     </div>
     <!-- PRE-FOOTER -->
 
-<br><br><br><br><br><br><br><br><br><br><br><br>
+    <!-- FOOTER -->
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-3 mb-3">
+                    <img src="images/DLS-logo-neg.svg">
+                </div>
+                <div class="col-sm-3 col-6 offset-md-1">
+                    <img src="images/Igraj odgovorno.svg">
+                </div>
+                <div class="col-sm-3 col-6 footer-social">
+                    <a href="https://www.facebook.com/LotoSrbija" class="footer-social__item">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://www.youtube.com/user/LotoDSL" class="footer-social__item">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                    <a href="https://www.instagram.com/lotosrbija/" class="footer-social__item">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="row mt-4 pb-4 border-bottom">
+                <div class="col-sm-2">
+                    <ul>
+                        <li><a href="#"><strong>IGRE</strong></a></li>
+                        <li><a href="#">Loto</a></li>
+                        <li><a href="#">Bingo</a></li>
+                        <li><a href="#">Greb Greb</a></li>
+                        <li><a href="#">eSrećke</a></li>
+                        <li><a href="#">Srećkovo takmičenje</a></li>
+                        <li><a href="#">Pravila igre</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-2">
+                    <ul>
+                        <li><a href="#"><strong>REZULTATI</strong></a></li>
+                        <li><a href="#">Loto</a></li>
+                        <li><a href="#">Bingo</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-2">
+                    <ul>
+                        <li><a href="#"><strong>VESTI</strong></a></li>
+                        <li><a href="#">Novosti</a></li>
+                        <li><a href="#">Srećni dobitnici</a></li>
+                        <li><a href="#">Arhiva</a></li>
+                        <li><a href="#">DOP</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-2">
+                    <ul>
+                        <li><a href="#"><strong>O NAMA</strong></a></li>
+                        <li><a href="#">Istorijat</a></li>
+                        <li><a href="#">Finansijski izveštaji</a></li>
+                        <li><a href="#">Ostala dokumenta</a></li>
+                        <li><a href="#">Javne nabavke</a></li>
+                        <li><a href="#">Anketa</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-2">
+                    <ul>
+                        <li><a href="#"><strong>POMOĆ</strong></a></li>
+                        <li><a href="#">Šta je Loto Online?</a></li>
+                        <li><a href="#">Šta je DLS račun?</a></li>
+                        <li><a href="#">Šta je Moj nalog?</a></li>
+                        <li><a href="#">eSrećke?</a></li>
+                        <li><a href="#">Srećkovo takmičenje?</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-2">
+                    <ul>
+                        <li><a href="#"><strong>KONTAKT</strong></a></li>
+                        <li><a href="#">Državna lutrija Srbije</a></li>
+                        <li><a href="#">Uskočka 4-6</a></li>
+                        <li><a href="#">Tel: 0800 202 303</a></li>
+                        <li><a href="#">(Pon-Ned. 07:00-22:00h)</a></li>
+                        <li><a href="#">11000 Beograd, Srbija</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="row mt-4 align-items-end">
+                <div class="col-sm-3">
+                    <ul>
+                        <li><a href="#"><strong>DOP</strong></a></li>
+                        <li><a href="#">Odgovorno priređivanje</a></li>
+                        <li><a href="#">Kome pomažete igrajući igre</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-4 offset-md-1">
+                    <ul>
+                        <li>
+                            <a href="#" class="d-inline"><strong>Uslovi</strong></a>&nbsp;&nbsp;&nbsp;
+                            <a href="#" class="d-inline"><strong>Politika privatnosti</strong></a>&nbsp;&nbsp;
+                            <a href="#" class="d-inline"><strong>Polisa kolačića</strong></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-sm-4">
+                    <div class="row mt-4">
+                        <div class="col-6">
+                            <a href="/DLSFiles/Dokumenti/Državna lutrija Srbije.apk"><img src="images/applestore.png"
+                                    width="160"></a>
+                        </div>
+                        <div class="col-6">
+                            <a href="#"><img src="images/googlestore.png" width="160"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-2 ml-auto mt-3">
+                    <ul>
+                        <li class="color-white">
+                            <a href="#" class="active">Srpski</a> | <a href="#">English</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- FOOTER -->
+
+
+    <!-- AFTER FOOTER -->
+    <footer class="after-footer">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-sm-4 mt-3">
+                    <span>2020. dls@alrightsreserved</span>
+                </div>
+                <div class="col-sm-3 mt-3 ml-auto">
+                    <div class="row align-items-center">
+                        <div class="col-4">
+                            <img src="images/Cert1.png" width="70">
+                        </div>
+                        <div class="col-4">
+                            <img src="images/Cert2.png" width="70">
+                        </div>
+                        <div class="col-4">
+                            <img src="images/Cert3.png" width="70">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- AFTER FOOTER -->
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
