Milancetove sugestije ispravka

--- a/bingo.html
+++ b/bingo.html
@@ -424,7 +424,7 @@
                 <div class="row">
                     <div class="col-sm-6 col-lg-4">
                         <div class="grid-item">
-                            <div class="grid-item__header grid-item__header-purple text-center text-uppercase text-white">
+                            <div class="grid-item__header grid-item__header--purple text-center text-uppercase text-white">
                                 <span>B34</span>
                             </div>
                             <div class="grid-item__body">
@@ -441,7 +441,7 @@
                     </div>
                     <div class="col-sm-6 col-lg-4">
                         <div class="grid-item">
-                            <div class="grid-item__header grid-item__header-orange text-center text-uppercase text-white">
+                            <div class="grid-item__header grid-item__header--orange text-center text-uppercase text-white">
                                 <span>B39</span>
                             </div>
                             <div class="grid-item__body">
@@ -458,7 +458,7 @@
                     </div>
                     <div class="col-sm-6 col-lg-4">
                         <div class="grid-item">
-                            <div class="grid-item__header grid-item__header-blue text-center text-uppercase text-white">
+                            <div class="grid-item__header grid-item__header--blue text-center text-uppercase text-white">
                                 <span>B40+</span>
                             </div>
                             <div class="grid-item__body">
@@ -474,7 +474,7 @@
                     </div>
                     <div class="col-sm-6 col-lg-4">
                         <div class="grid-item">
-                            <div class="grid-item__header grid-item__header-blue text-center text-uppercase text-white">
+                            <div class="grid-item__header grid-item__header--blue text-center text-uppercase text-white">
                                 <img class="grid-item-img01" src="images/bingo/plus-img.svg" alt="">
                             </div>
                             <div class="grid-item__body">
@@ -490,7 +490,7 @@
                     </div>
                     <div class="col-sm-6 col-lg-4">
                         <div class="grid-item">
-                            <div class="grid-item__header grid-item__header-purple text-center text-uppercase text-white">
+                            <div class="grid-item__header grid-item__header--purple text-center text-uppercase text-white">
                                 <img class="grid-item-img02" src="images/bingo/centar-img.svg" alt="">
                             </div>
                             <div class="grid-item__body">
@@ -506,7 +506,7 @@
                     </div>
                     <div class="col-sm-6 col-lg-4">
                         <div class="grid-item">
-                            <div class="grid-item__header grid-item__header-green text-center text-uppercase text-white">
+                            <div class="grid-item__header grid-item__header--green text-center text-uppercase text-white">
                                 <img class="grid-item-img03" src="images/bingo/kockica-img.svg" alt="">
                             </div>
                             <div class="grid-item__body">
