ubacen header i footer na stranice

--- a/bingo.html
+++ b/bingo.html
@@ -17,9 +17,64 @@
 </head>
 <body>
 
-    <div class="falseHeader" style="height: 120px;"></div>
+    <!-- NAVIGATION -->
+    <header>
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
+                    aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <a class="navbar-brand" href="#">
+                    <img width="140" src="images\DLS logo.svg">
+                </a>
 
-    <!-- MAIN BANNER >> -->
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle px-3" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Igre
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Loto</a>
+                                <a class="dropdown-item" href="#">Bingo</a>
+                                <a class="dropdown-item" href="#">Greb greb</a>
+                                <a class="dropdown-item" href="#">e-Srećke</a>
+                                <a class="dropdown-item" href="#">Srećkovo takmičenje</a>
+                                <a class="dropdown-item" href="#">Pravila igara</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link px-3" href="#">Rezultati</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link px-3" href="#">Uplatna mesta</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link px-3" href="#">Vesti</a>
+                        </li>
+                        <li class="nav-item dropdown px-3">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                O nama
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                            </div>
+                        </li>
+                    </ul>
+                    <a href="#" class="btn btn-outline-dark mr-sm-2 my-sm-0" type="submit">PRIJAVI SE</a>
+                    <a href="#" class="btn btn-primary my-sm-0" type="submit"><strong>REGISTRUJ SE</strong></a>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <!-- NAVIGATION -->
+
+    <!-- MAIN BANNER -->
     <section class="main-banner main-banner--bingo">
         <div class="container">
             <div class="row">
@@ -34,9 +89,9 @@
             </div>
         </div>
     </section>
-    <!-- << MAIN BANNER -->
+    <!-- MAIN BANNER -->
 
-    <!-- BINGO TICKET >> -->
+    <!-- BINGO TICKET -->
     <section id="play-bingo" class="play-bingo">
         <div class="container">
             <div class="row">
@@ -370,9 +425,9 @@
             </div>
         </div>
     </section>
-    <!-- << BINGO TICKET -->
+    <!-- BINGO TICKET -->
 
-    <!-- DRAW BANNER >> -->
+    <!-- DRAW BANNER -->
     <section class="draw-banner">
         <div class="container">
             <div class="row">
@@ -401,9 +456,9 @@
             </div>
         </div>
     </section>
-    <!-- << DRAW BANNER -->
+    <!-- DRAW BANNER -->
 
-    <!-- HOW TO PLAY >> -->
+    <!-- HOW TO PLAY -->
     <section class="how-to-play how-to-play--bingo">
         <div class="how-to-play__headline">
             <div class="container">
@@ -526,9 +581,9 @@
             </div>
         </div>
     </section>
-    <!-- << HOW TO PLAY -->
+    <!-- HOW TO PLAY -->
 
-    <!-- CLOVER >> -->
+    <!-- CLOVER -->
     <section class="clover">
        <div class="container">
            <div class="row text-center text-uppercase">
@@ -539,10 +594,130 @@
            </div>
        </div>
     </section>
-    <!-- << CLOVER -->
+    <!-- CLOVER -->
 
-    <div class="falseFooter" style="height: 320px;background-color: #152238;"></div>
-    
+    <!-- FOOTER -->
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-3 mb-3">
+                    <img src="images/DLS-logo-neg.svg">
+                </div>
+                <div class="col-sm-3 col-6 offset-md-1">
+                    <img src="images/Igraj odgovorno.svg">
+                </div>
+                <div class="col-sm-3 col-6 footer-social">
+                    <a href="https://www.facebook.com/LotoSrbija" class="footer-social__item">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://www.youtube.com/user/LotoDSL" class="footer-social__item">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                    <a href="https://www.instagram.com/lotosrbija/" class="footer-social__item">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="row mt-4 pb-4 border-bottom">
+                <div class="col-sm-2">
+                    <ul>
+                        <li><a href="#"><strong>IGRE</strong></a></li>
+                        <li><a href="#">Loto</a></li>
+                        <li><a href="#">Bingo</a></li>
+                        <li><a href="#">Greb Greb</a></li>
+                        <li><a href="#">eSrećke</a></li>
+                        <li><a href="#">Srećkovo takmičenje</a></li>
+                        <li><a href="#">Pravila igre</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-2">
+                    <ul>
+                        <li><a href="#"><strong>REZULTATI</strong></a></li>
+                        <li><a href="#">Loto</a></li>
+                        <li><a href="#">Bingo</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-2">
+                    <ul>
+                        <li><a href="#"><strong>VESTI</strong></a></li>
+                        <li><a href="#">Novosti</a></li>
+                        <li><a href="#">Srećni dobitnici</a></li>
+                        <li><a href="#">Arhiva</a></li>
+                        <li><a href="#">DOP</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-2">
+                    <ul>
+                        <li><a href="#"><strong>O NAMA</strong></a></li>
+                        <li><a href="#">Istorijat</a></li>
+                        <li><a href="#">Finansijski izveštaji</a></li>
+                        <li><a href="#">Ostala dokumenta</a></li>
+                        <li><a href="#">Javne nabavke</a></li>
+                        <li><a href="#">Anketa</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-2">
+                    <ul>
+                        <li><a href="#"><strong>POMOĆ</strong></a></li>
+                        <li><a href="#">Šta je Loto Online?</a></li>
+                        <li><a href="#">Šta je DLS račun?</a></li>
+                        <li><a href="#">Šta je Moj nalog?</a></li>
+                        <li><a href="#">eSrećke?</a></li>
+                        <li><a href="#">Srećkovo takmičenje?</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-2">
+                    <ul>
+                        <li><a href="#"><strong>KONTAKT</strong></a></li>
+                        <li><a href="#">Državna lutrija Srbije</a></li>
+                        <li><a href="#">Uskočka 4-6</a></li>
+                        <li><a href="#">Tel: 0800 202 303</a></li>
+                        <li><a href="#">(Pon-Ned. 07:00-22:00h)</a></li>
+                        <li><a href="#">11000 Beograd, Srbija</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="row mt-4 align-items-end">
+                <div class="col-sm-3">
+                    <ul>
+                        <li><a href="#"><strong>DOP</strong></a></li>
+                        <li><a href="#">Odgovorno priređivanje</a></li>
+                        <li><a href="#">Kome pomažete igrajući igre</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-4 offset-md-1">
+                    <ul>
+                        <li>
+                            <a href="#" class="d-inline"><strong>Uslovi</strong></a>&nbsp;&nbsp;&nbsp;
+                            <a href="#" class="d-inline"><strong>Politika privatnosti</strong></a>&nbsp;&nbsp;
+                            <a href="#" class="d-inline"><strong>Polisa kolačića</strong></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-sm-4">
+                    <div class="row mt-4">
+                        <div class="col-6">
+                            <a href="/DLSFiles/Dokumenti/Državna lutrija Srbije.apk"><img src="images/applestore.png"
+                                    width="160"></a>
+                        </div>
+                        <div class="col-6">
+                            <a href="#"><img src="images/googlestore.png" width="160"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-2 ml-auto mt-3">
+                    <ul>
+                        <li class="color-white">
+                            <a href="#" class="active">Srpski</a> | <a href="#">English</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- FOOTER -->
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
