--- a/greb-greb.html
+++ b/greb-greb.html
@@ -77,17 +77,17 @@
     <!-- NAVIGATION -->
 
     <!-- ESGG HERO -->
-    <section class="esgg-hero esgg-hero--es">
+    <section class="esgg-hero esgg-hero--greb">
         <div class="esgg-hero__bg">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
                         <div class="es-logo">
-                            <img src="images/e-srecke/e-srecke_logo.svg" alt="E-srećke logo">
+                            <img src="images/e-srecke/greb-greb_logo.svg" alt="E-srećke logo">
                         </div>
-                        <div class="es-text text-center">
-                            <h1 class="text-white">Osvoji do 1.000.000 din!</h1>
-                            <span>Instant zabava i brzi keš</span>
+                        <div class="gg-text">
+                            <h1>Ogrebi i <br>blago tebi!</h1>
+                            <span>Instant zabava te čeka na prodajnim mestima Državne lutrije Srbije i partnera.</span>
                         </div>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
     <section class="srecke container">
         <div class="srecke-item srecke-item--bubamara">
             <div class="srecke-item__img">
-                <img src="images/e-srecke/bubamara-game.png" alt="">
+                <img src="images/e-srecke/bubamara.png" alt="">
             </div>
             <div class="srecke-item__text-big">
                 Buba Mara
@@ -122,7 +122,7 @@
 
         <div class="srecke-item srecke-item--slatkikes">
             <div class="srecke-item__img">
-                <img src="images/e-srecke/slatkikes-game.png" alt="">
+                <img src="images/e-srecke/slatki-kes.png" alt="">
             </div>
             <div class="srecke-item__text-big">
                 Slatki keš
@@ -144,7 +144,7 @@
         
         <div class="srecke-item srecke-item--kockice">
             <div class="srecke-item__img">
-                <img src="images/e-srecke/kockice-game.png" alt="">
+                <img src="images/e-srecke/kockice.png" alt="">
             </div>
             <div class="srecke-item__text-big">
                 Kockice
@@ -166,7 +166,7 @@
 
         <div class="srecke-item srecke-item--zuca">
             <div class="srecke-item__img">
-                <img src="images/e-srecke/zuca-game.png" alt="">
+                <img src="images/e-srecke/zuca.png" alt="">
             </div>
             <div class="srecke-item__text-big">
                 Žuća
@@ -188,7 +188,7 @@
 
         <div class="srecke-item srecke-item--iksoks">
             <div class="srecke-item__img">
-                <img src="images/e-srecke/xox-game.png" alt="">
+                <img src="images/e-srecke/iks-oks.png" alt="">
             </div>
             <div class="srecke-item__text-big">
                 XOX
@@ -243,7 +243,7 @@
     <!-- LOTO BANNER -->
 
     <!-- CHARITY -->
-    <div class="charity charity--srecke">
+    <div class="charity charity--greb">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-lg-4">
@@ -252,7 +252,7 @@
                     </div>
                 </div>
                 <div class="col-md-12 col-lg-8">
-                    <div class="charity-text charity-text--srecke">
+                    <div class="charity-text charity-text--greb">
                         <p class="h1 charity-text__price"><strong>55.000.000 dinara</strong></p>
                         <p class="lg charity-text__text">odlazi u dobrotvorne svrhe zahvaljujuci vama. Lorem
                             ipsum dolor sit amet, consectetur adipiscing elit!</p>
