rad na greb-greb.html

--- a/greb-greb.html
+++ b/greb-greb.html
@@ -97,116 +97,224 @@
     <!-- ESGG HERO -->
 
     <!-- SRECKE -->
-    <section class="srecke container">
-        <div class="srecke-item srecke-item--bubamara">
+    <section class="srecke srecke--greb container">
+
+        <div class="srecke-item">
             <div class="srecke-item__img">
-                <img src="images/e-srecke/bubamara.png" alt="">
+                <img src="images/e-srecke/veca-sreca.png" alt="">
             </div>
             <div class="srecke-item__text-big">
-                Buba Mara
+                Veća sreća
             </div>
             <div class="srecke-item__price">
-                Cena:<br>20, 40, 60, 80, 100 RSD
+                premija:<br>2 x 6.000.000 din.
             </div>
             <div class="srecke-item__max">
-                Maks. dobitak:<br>200,000 do 1mil. RSD
+                cena: 200 din.
             </div>
             <div class="srecke-item__rules">
                 <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
-            </div>
-            <div class="srecke-item__play">
-                <button class="btn-dark">Igraj</button>
-                <a href="#" class="demo">Demo</a>
             </div>
         </div>
 
-        <div class="srecke-item srecke-item--slatkikes">
+        <div class="srecke-item">
             <div class="srecke-item__img">
-                <img src="images/e-srecke/slatki-kes.png" alt="">
+                <img src="images/e-srecke/neon.png" alt="">
             </div>
             <div class="srecke-item__text-big">
-                Slatki keš
+                Neon
             </div>
             <div class="srecke-item__price">
-                Cena:<br>20, 40, 60, 80, 100 RSD
+                premija:<br>2 x 6.500.000 din.
             </div>
             <div class="srecke-item__max">
-                Maks. dobitak:<br>200,000 do 1mil. RSD
+                cena: 200 din.
             </div>
             <div class="srecke-item__rules">
                 <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
-            </div>
-            <div class="srecke-item__play">
-                <button class="btn-dark">Igraj</button>
-                <a href="#" class="demo">Demo</a>
             </div>
         </div>
         
-        <div class="srecke-item srecke-item--kockice">
+        <div class="srecke-item">
             <div class="srecke-item__img">
-                <img src="images/e-srecke/kockice.png" alt="">
+                <img src="images/e-srecke/greb-greb-game.png" alt="">
             </div>
             <div class="srecke-item__text-big">
-                Kockice
+                Greb Greb
             </div>
             <div class="srecke-item__price">
-                Cena:<br>20, 40, 60, 80, 100 RSD
+                premija:<br>4 x 4.550.000 din.
             </div>
             <div class="srecke-item__max">
-                Maks. dobitak:<br>200,000 do 1mil. RSD
+                cena: 150 din.
             </div>
             <div class="srecke-item__rules">
                 <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
-            </div>
-            <div class="srecke-item__play">
-                <button class="btn-dark">Igraj</button>
-                <a href="#" class="demo">Demo</a>
             </div>
         </div>
 
-        <div class="srecke-item srecke-item--zuca">
+        <div class="srecke-item">
             <div class="srecke-item__img">
-                <img src="images/e-srecke/zuca.png" alt="">
+                <img src="images/e-srecke/par-nepar.png" alt="">
             </div>
             <div class="srecke-item__text-big">
-                Žuća
+                Par Nepar
             </div>
             <div class="srecke-item__price">
-                Cena:<br>20, 40, 60, 80, 100 RSD
+                premija:<br>4 x 4.500.000 din.
             </div>
             <div class="srecke-item__max">
-                Maks. dobitak:<br>200,000 do 1mil. RSD
+                cena: 150 din.
             </div>
             <div class="srecke-item__rules">
                 <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
-            </div>
-            <div class="srecke-item__play">
-                <button class="btn-dark">Igraj</button>
-                <a href="#" class="demo">Demo</a>
             </div>
         </div>
 
-        <div class="srecke-item srecke-item--iksoks">
+        <div class="srecke-item">
             <div class="srecke-item__img">
-                <img src="images/e-srecke/iks-oks.png" alt="">
+                <img src="images/e-srecke/domine.png" alt="">
             </div>
             <div class="srecke-item__text-big">
-                XOX
+                Domine
             </div>
             <div class="srecke-item__price">
-                Cena:<br>20, 40, 60, 80, 100 RSD
+                premija:<br>10 x 1.500.000 din.
             </div>
             <div class="srecke-item__max">
-                Maks. dobitak:<br>200,000 do 1mil. RSD
+                cena: 150 din.
             </div>
             <div class="srecke-item__rules">
                 <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
             </div>
-            <div class="srecke-item__play">
-                <button class="btn-dark">Igraj</button>
-                <a href="#" class="demo">Demo</a>
+        </div>
+
+        <div class="srecke-item">
+            <div class="srecke-item__img">
+                <img src="images/e-srecke/kolo-srece.png" alt="">
+            </div>
+            <div class="srecke-item__text-big">
+                Kolo Sreće
+            </div>
+            <div class="srecke-item__price">
+                premija:<br>6 x 3.000.000 din.
+            </div>
+            <div class="srecke-item__max">
+                cena: 100 din.
+            </div>
+            <div class="srecke-item__rules">
+                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
             </div>
         </div>
+
+        <div class="srecke-item">
+            <div class="srecke-item__img">
+                <img src="images/e-srecke/srecni-znaci.png" alt="">
+            </div>
+            <div class="srecke-item__text-big">
+                Srećni znaci
+            </div>
+            <div class="srecke-item__price">
+                premija:<br>3 x 3.500.000 din.
+            </div>
+            <div class="srecke-item__max">
+                cena: 100 din.
+            </div>
+            <div class="srecke-item__rules">
+                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+            </div>
+        </div>
+
+        <div class="srecke-item">
+            <div class="srecke-item__img">
+                <img src="images/e-srecke/greb-greb-100.png" alt="">
+            </div>
+            <div class="srecke-item__text-big">
+                Greb Greb 100
+            </div>
+            <div class="srecke-item__price">
+                premija:<br>4 x 3.550.000 din.
+            </div>
+            <div class="srecke-item__max">
+                cena: 100 din.
+            </div>
+            <div class="srecke-item__rules">
+                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+            </div>
+        </div>
+
+        <div class="srecke-item">
+            <div class="srecke-item__img">
+                <img src="images/e-srecke/ulepsaj.png" alt="">
+            </div>
+            <div class="srecke-item__text-big">
+                Ulepšaj mi dan!
+            </div>
+            <div class="srecke-item__price">
+                premija:<br>4 x 4.000.000 din.
+            </div>
+            <div class="srecke-item__max">
+                cena: 150 din.
+            </div>
+            <div class="srecke-item__rules">
+                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+            </div>
+        </div>
+
+        <div class="srecke-item">
+            <div class="srecke-item__img">
+                <img src="images/e-srecke/cup-sa-blagom.png" alt="">
+            </div>
+            <div class="srecke-item__text-big">
+                Ćup sa blagom
+            </div>
+            <div class="srecke-item__price">
+                premija:<br>5 x 3.000.000 din.
+            </div>
+            <div class="srecke-item__max">
+                cena: 100 din.
+            </div>
+            <div class="srecke-item__rules">
+                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+            </div>
+        </div>
+
+        <div class="srecke-item">
+            <div class="srecke-item__img">
+                <img src="images/e-srecke/instant-loto.png" alt="">
+            </div>
+            <div class="srecke-item__text-big">
+                Instant loto
+            </div>
+            <div class="srecke-item__price">
+                premija:<br>3 x 2.500.000 din.
+            </div>
+            <div class="srecke-item__max">
+                cena: 80 din.
+            </div>
+            <div class="srecke-item__rules">
+                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+            </div>
+        </div>
+        
+        <div class="srecke-item">
+            <div class="srecke-item__img">
+                <img src="images/e-srecke/pun-pogodak.png" alt="">
+            </div>
+            <div class="srecke-item__text-big">
+                Pun pogodak!
+            </div>
+            <div class="srecke-item__price">
+                premija:<br>3 x 4.000.000 din.
+            </div>
+            <div class="srecke-item__max">
+                cena: 100 din.
+            </div>
+            <div class="srecke-item__rules">
+                <a href="#">Pravila igre <i class="fas fa-chevron-right"></i></a>
+            </div>
+        </div>
+
     </section>
     <!-- SRECKE -->
 
